syntax="proto3";

package pb;

option go_package="./;pb";

service greeter{
    rpc Login(LoginRequest) returns (LoginResponse){};
    rpc Hello(HelloRequest) returns (stream HelloResponse){};
    rpc HandleHi (stream HIRequest) returns (HIResponse){};
    rpc HandleChat (stream ChatRequest) returns (stream ChatResponse){};
}

message LoginRequest{
   string username=1;
   string password=2;
   string repassword=3;
}

message LoginResponse{
   string msg=1;
}

message HelloRequest{
   string content=1;
}

message HelloResponse{
   string something=1;
}

message HIRequest {
   string conent=1;
}

message HIResponse{
   string something=1;
}

message ChatRequest{
   string name=1;
   string chatcontent=2;
}

message ChatResponse{
    string anwser=1;
    string pid=2;
}
